@@ -1,13 +1,17 @@
 package com.grepp.spring.app.controller.api.schedules;
 
 import com.grepp.spring.app.controller.api.schedules.payload.CreateDepartLocationRequest;
+import com.grepp.spring.app.controller.api.schedules.payload.CreateDepartLocationResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.CreateOfflineDetailLocationsRequest;
 import com.grepp.spring.app.controller.api.schedules.payload.CreateOnlineMeetingRequest;
 import com.grepp.spring.app.controller.api.schedules.payload.CreateOnlineMeetingResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.CreateSchedulesRequest;
+import com.grepp.spring.app.controller.api.schedules.payload.CreateSchedulesResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.CreateWorkspaceRequest;
+import com.grepp.spring.app.controller.api.schedules.payload.DeleteSchedulesResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.ModifyOfflineDetailLocationsRequest;
 import com.grepp.spring.app.controller.api.schedules.payload.ModifySchedulesRequest;
+import com.grepp.spring.app.controller.api.schedules.payload.ModifySchedulesResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.ModifyWorkspaceRequest;
 import com.grepp.spring.app.controller.api.schedules.payload.ShowMiddleLocationResponse;
 import com.grepp.spring.app.controller.api.schedules.payload.ShowSchedulesResponse;
@@ -21,6 +25,7 @@ import com.grepp.spring.infra.response.ApiResponse;
 import com.grepp.spring.infra.response.ResponseCode;
 import io.swagger.v3.oas.annotations.Operation;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -30,6 +35,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -39,7 +45,7 @@ public class SchedulesController {
     // 일정 등록
     @Operation(summary = "일정 등록", description = "일정 등록을 진행합니다.")
     @PostMapping("/create")
-    public ResponseEntity<ApiResponse> createScedules(@RequestBody CreateSchedulesRequest request) {
+    public ResponseEntity<ApiResponse<CreateSchedulesResponse>> createSchedules(@RequestBody CreateSchedulesRequest request) {
 
         try {
 
@@ -48,16 +54,16 @@ public class SchedulesController {
                     request.getEventId()!=20003L && request.getEventId()!=20004L && request.getEventId()!=22222L
             ){
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 이벤트를 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 이벤트를 찾을 수 없습니다. eventId는 20000 ~ 20004 입니다."));
             }
 
 
-            return ResponseEntity.ok(ApiResponse.noContent());
+            return ResponseEntity.ok(ApiResponse.success("일정이 등록되었습니다."));
         }
          catch (Exception e) {
              if (e instanceof AuthApiException) {
                  return ResponseEntity.status(401)
-                     .body(ApiResponse.error(ResponseCode.UNAUTHORIZED, "권한이 없습니다."));
+                     .body(ApiResponse.error(ResponseCode.UNAUTHORIZED, "인증(로그인)이 되어있지 않습니다. 헤더에 Bearer {AccressToken}을 넘겼는지 확인해주세요."));
              }
 
              return ResponseEntity.status(400)
@@ -65,17 +71,23 @@ public class SchedulesController {
          }
     }
 
+    //NOTE
     // 일정 수정
     @Operation(summary = "일정 수정", description = "일정 수정을 진행합니다.")
-    @PatchMapping("/modify/{scheduleId}")
-    public ResponseEntity<ApiResponse> modifyScedules(@PathVariable Long scheduleId, @RequestBody ModifySchedulesRequest request) {
+    @PatchMapping("/modify/{scheduleId}") // 일정 수정 관련된 것들은 모두 수행. 그럼 pathch가 맞는가?
+    public ResponseEntity<ApiResponse<ModifySchedulesResponse>> modifyScedules(@PathVariable Long scheduleId, @RequestBody ModifySchedulesRequest request) {
         try {
+
+            if (request.getEventId() !=20000 && request.getEventId() !=20001 && request.getEventId() !=20002 && request.getEventId() !=20003 && request.getEventId() !=20004 && request.getEventId() !=22222 ) {
+                return ResponseEntity.status(404)
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 이벤트를 찾을 수 없습니다. eventId는 20000 ~ 20004 입니다."));
+            }
 
             if (scheduleId !=30000 && scheduleId !=30001 && scheduleId !=30002 && scheduleId !=30003 && scheduleId !=30005 && scheduleId !=30303 && scheduleId != 33333) {
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 스케줄을 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다. scheduleId는 30000 ~ 30003 입니다."));
             }
-            return ResponseEntity.ok(ApiResponse.noContent());
+            return ResponseEntity.ok(ApiResponse.success("일정이 수정되었습니다."));
         }
 
          catch (Exception e) {
@@ -88,20 +100,25 @@ public class SchedulesController {
         }
     }
 
-    // 일정 확인
-    @Operation(summary = "일정 확인", description = "일정을 조회합니다.")
+    // 일정 정보 조회
+    @Operation(summary = "일정 정보 조회", description = "일정 정보를 조회합니다.")
     @GetMapping("/show/{scheduleId}")
-    public ResponseEntity<ApiResponse<ShowSchedulesResponse>> showScedules(@PathVariable Long scheduleId) {
+    public ResponseEntity<ApiResponse<ShowSchedulesResponse>> showSchedules(@PathVariable Long scheduleId, @RequestParam Long eventId) {
 
         try {
 
             if (scheduleId !=30000 && scheduleId !=30001 && scheduleId !=30002 && scheduleId !=30003 && scheduleId !=30005 && scheduleId !=30303 && scheduleId != 33333) {
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다. scheduleId는 30000 ~ 30003 입니다."));
+            }
+
+            if (eventId !=20000 && eventId !=20001 && eventId !=20002 && eventId !=20003 && eventId !=20004 && eventId !=22222 ) {
+                return ResponseEntity.status(404)
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 이벤트를 찾을 수 없습니다. eventId는 20000 ~ 20004 입니다."));
             }
 
             ShowSchedulesResponse  response = new ShowSchedulesResponse();
-            response.setEventId(1L);
+            response.setEventId(20000L);
             response.setStartTime(LocalDateTime.of(2025, 7, 6, 3, 7));
             response.setEndTime(LocalDateTime.of(2025, 7, 7, 3, 7));
             response.setSCHEDULES_STATUS(SCHEDULES_STATUS.FIXED);
@@ -111,6 +128,9 @@ public class SchedulesController {
             response.setMeetingPlatform(MEETING_PLATFORM.ZOOM);
             response.setPlatformUrl("https://zoom.us/test-meeting");
 
+            response.setMembers(List.of("이서준","이강현","안준희","정서윤","최동준","박상윤","박은서","박준규","현혜주","황수지","아이유","박보검"));
+            response.setWorkspacesUrl(List.of("www.notion.com","www.github.com","www.slack.com"));
+            response.setWorkspacesName(List.of("프론트엔드 기획서","이때 어때 레포지토리","데브코스 슬렉"));
             return ResponseEntity.ok(ApiResponse.success(response));
         }
 
@@ -127,14 +147,14 @@ public class SchedulesController {
     // 일정 삭제
     @Operation(summary = "일정 삭제", description = "일정을 삭제합니다.")
     @DeleteMapping("/delete/{scheduleId}")
-    public ResponseEntity<ApiResponse> deleteScedules(@PathVariable Long scheduleId) {
+    public ResponseEntity<ApiResponse<DeleteSchedulesResponse>> deleteSchedules(@PathVariable Long scheduleId) {
 
         try {
             if (scheduleId !=30000 && scheduleId !=30001 && scheduleId !=30002 && scheduleId !=30003 && scheduleId !=30005 && scheduleId !=30303 && scheduleId != 33333) {
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다. scheduleId는 30000 ~ 30003 입니다."));
             }
-            return ResponseEntity.ok(ApiResponse.noContent());
+            return ResponseEntity.ok(ApiResponse.success("일정을 삭제했습니다."));
         }
            catch (Exception e) {
             if (e instanceof AuthApiException) {
@@ -148,25 +168,20 @@ public class SchedulesController {
 
     // 출발장소 등록
     @Operation(summary = "출발장소 등록", description = "출발장소 등록을 진행합니다.")
-    @PostMapping("create-depart-location/{memberId}")
-    public ResponseEntity<ApiResponse> createDepartLocation(@PathVariable String memberId, @RequestBody CreateDepartLocationRequest request) {
+    @PostMapping("create-depart-location")
+    public ResponseEntity<ApiResponse<CreateDepartLocationResponse>> createDepartLocation(@RequestBody CreateDepartLocationRequest request) {
 
         try {
-            if(
-                !memberId.equals("KAKAO_1234") && !memberId.equals("KAKAO_5678") && !memberId.equals("GOOGLE_1234") && !memberId.equals("GOOGLE_5678")
-            ){
-                return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 memberId를 찾을 수 없습니다."));
-            }
+
             if(
                 request.getScheduleId()!= 30000L && request.getScheduleId()!=30001L && request.getScheduleId()!=30002L &&
                     request.getScheduleId()!=30003L && request.getScheduleId()!=30005L && request.getScheduleId()!=30303L && request.getScheduleId()!=33333L
             ){
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다. scheduleId는 30000 ~ 30003 입니다."));
             }
 
-            return ResponseEntity.ok(ApiResponse.noContent());
+            return ResponseEntity.ok(ApiResponse.success("출발장소가 등록되었습니다."));
         }
 
            catch (Exception e) {
@@ -179,8 +194,7 @@ public class SchedulesController {
         }
     }
 
-
-    // 중간장소 후보 조회
+    // 중간장소 후보 조회 // NOTE : 리스트 정보 계속 null로 저장
     @Operation(summary = "중간장소 후보 조회", description = "중간장소 후보를 조회합니다.")
     @GetMapping("/show-suggested-locations{scheduleId}")
     public ResponseEntity<ApiResponse<List<ShowSuggestedLocationsResponse>>> showSuggestedLocations(@PathVariable Long scheduleId) {
@@ -188,16 +202,19 @@ public class SchedulesController {
         try {
             if (scheduleId !=30000 && scheduleId !=30001 && scheduleId !=30002 && scheduleId !=30003 && scheduleId !=30005 && scheduleId !=30303 && scheduleId != 33333) {
                 return ResponseEntity.status(404)
-                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다."));
+                    .body(ApiResponse.error(ResponseCode.NOT_FOUND, "해당 일정을 찾을 수 없습니다. scheduleId는 30000 ~ 30003 입니다."));
             }
 
             ShowSuggestedLocationsResponse response1 = new ShowSuggestedLocationsResponse();
-            response1.setLocationName("강남역");
+            response1.setLocationName("동대문역사문화공원역");
             response1.setLatitude(37.4979);
             response1.setLongitude(127.0276);
             response1.setSuggestedMemberId(1L);
             response1.setVoteCount(5L);
             response1.setSCHEDULES_STATUS(VOTE_STATUS.ALMOST);
+            response1.setMetroLines(Arrays.asList("2", "4", "5"));
+            response1.setStationColors(Arrays.asList("G222","B342","P234"));
+            response1.setTravelTime(47);
 
             ShowSuggestedLocationsResponse response2 = new ShowSuggestedLocationsResponse();
             response2.setLocationName("역삼역");
@@ -205,7 +222,10 @@ public class SchedulesController {
             response2.setLongitude(127.0365);
             response2.setSuggestedMemberId(2L);
             response2.setVoteCount(2L);
-            response2.setSCHEDULES_STATUS(VOTE_STATUS.DEFAULT);
+            response2.setSCHEDULES_STATUS(VOTE_STATUS.WINNER);
+            response2.setMetroLines(Arrays.asList("2","8"));
+            response2.setStationColors(Arrays.asList("G222","R342"));
+            response2.setTravelTime(47);
 
             ShowSuggestedLocationsResponse response3 = new ShowSuggestedLocationsResponse();
             response3.setLocationName("홍대입구역");
@@ -213,9 +233,12 @@ public class SchedulesController {
             response3.setLongitude(126.9245);
             response3.setSuggestedMemberId(3L);
             response3.setVoteCount(8L);
-            response3.setSCHEDULES_STATUS(VOTE_STATUS.WINNER);
+            response3.setSCHEDULES_STATUS(VOTE_STATUS.DEFAULT);
+            response3.setMetroLines(Arrays.asList("2","5","경의중앙","수인분당"));
+            response3.setStationColors(Arrays.asList("G222","P234","b12314","y097234"));
+            response3.setTravelTime(47);
 
-            List<ShowSuggestedLocationsResponse> list = List.of(response1, response2, response3);
+            List<ShowSuggestedLocationsResponse> list = Arrays.asList(response1, response2, response3);
 
             return ResponseEntity.ok(ApiResponse.success(list));
         }
